--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,700&display=swap');
 
 :root {
-    --background-color: #E7F6F2;
-    --primary-color: #2C3333;
-    --secondary-color: #395B64;
+    --background-color: #222831;
+    --primary-color: #F2F2F2;
+    --secondary-color: #F96D00;
     --font: 'Nunito Sans', sans-serif;
 }
 
@@ -44,6 +44,7 @@ nav a {
 nav a:hover {
     text-decoration: underline;
     transform: scale(0.90);
+    transition: transform 0.5s;
 }
 
 span {
@@ -69,7 +70,7 @@ span {
 .linha {
     width: 90%;
     margin: 2rem auto;
-    border: 2px solid var(--primary-color);
+    border: 2px solid var(--secondary-color);
 
 }
 
